tests/negative/gold/unexpected-indent-test.gold
tests/negative/unexpected-indent-test.toit:12:5: error: All arguments must have the same indentation
    2
    ^
Compilation failed
